fix: improve Gemini API response handling and JSON parsing
- Add markdown code block removal in content extraction
- Enhance error handling with specific messages
- Fix API response parsing logic
- Update prompt structure for consistent JSON output
- Add null checks and validations
- Improve logging for debugging purposes

The changes resolve JSON parsing issues and make the service more robust.